--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -95,6 +95,7 @@ $oranges: (
 $common-prefix:                               'z-';
 
 // element default
+$element-font-family:                         $font-family-s;
 $element-font-size:                           $font-size-xs;
 $element-font-color:                          $gray800;
 $element-font-weight:                         $font-weight-regular;
