--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -152,7 +152,7 @@
             <div class="document-main-header flex-row justify-content-end align-items-center">
                 <div class="z-button-area" id="documentButtonArea"></div>
             </div>
-            <div class="drawing-board" id="documentDrawingBoard"></div>
+            <div class="z-drawing-board" id="documentDrawingBoard"></div>
         </div>
     </template>
 </th:block>
