--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -19,7 +19,7 @@
                     <span class="document-numbering" th:text="|#{document.label.docNo} : ${documentNo}|"></span>
                     <div class="z-button-area" id="documentButtonArea"></div>
                 </div>
-                <div class="drawing-board" id="documentPanel" data-display="token"></div>
+                <div class="z-drawing-board" id="documentPanel" data-display="token"></div>
             </div>
         </form>
         <div class="token-properties"></div>
