--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -26,7 +26,7 @@
                                 th:text="#{common.btn.print}"></button>
                     </div>
                 </div>
-                <div class="drawing-board" id="documentPanel"></div>
+                <div class="z-drawing-board" id="documentPanel"></div>
             </div>
         </form>
         <div class="token-properties">
