--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -129,6 +129,7 @@
   @include border(0.0625rem, dashed, #D7DBE0, all); // 1px
   @include borderRadius(0.0625rem); // 2px
   background-color: transparent;
+  // 컴포넌트 선택시
   &.selected {
     @include border(0.0625rem, solid, $component-selected-border-color, all); // 1px
     background-color: $component-selected-bg-color;
@@ -183,6 +184,20 @@
     // text editor
     .#{$common-prefix}text-editor {
       height: calc(2.5rem * var(--data-row)); // quill editor 높이 : 40 * row 갯수
+    }
+    // radio , checkbox
+    .radio, .checkbox {
+      .vertical {
+        display: block;
+        margin-top: 0.625rem;
+        &:first-of-type {
+          margin-top: 0;
+        }
+      }
+      .horizontal {
+        display: inline-block;
+        margin-right: 0.625rem;
+      }
     }
     // image 컴포넌트
     .#{$common-prefix}imagebox-placeholder {
