--- a/src/main/resources/public/template/document/documentPrint.html
+++ b/src/main/resources/public/template/document/documentPrint.html
@@ -17,7 +17,7 @@
                 <span class="float-right align-right" id="print-information"></span>
             </div>
             <div class="z-print-area">
-                <div class="drawing-board" id="documentDrawingBoard"></div>
+                <div class="z-drawing-board" id="documentDrawingBoard"></div>
             </div>
         </div>
     </div>
