--- a/src/main/resources/public/template/formDesigner/formDesigner.html
+++ b/src/main/resources/public/template/formDesigner/formDesigner.html
@@ -229,8 +229,8 @@
             </div>
             <!-- 폼 -->
             <div class="z-form-main" id="formMain">
-                <div id="saveInfo" class="save-info"></div>
-                <div class="align-center drawing-board" id="formDrawingBoard"></div>
+                <div id="saveInfo" class="z-save-info align-center"></div>
+                <div class="z-drawing-board align-center" id="formDrawingBoard"></div>
             </div>
             <!-- 속성 패널 -->
             <div class="z-form-properties-panel-header breadcrumb">
@@ -256,7 +256,7 @@
         <div class="document-main-header flex-row justify-content-end align-items-center">
             <div class="z-button-area" id="documentButtonArea"></div>
         </div>
-        <div class="drawing-board" id="documentDrawingBoard"></div>
+        <div class="z-drawing-board" id="documentDrawingBoard"></div>
     </div>
 </template>
 </body>
