--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -30,8 +30,8 @@
 </head>
 <body>
 <div class="alice-wrapper">
-    <div class="process-container">
-        <div class="process-header">
+    <div class="z-process-container">
+        <div class="z-process-header">
             <img class="logo"  th:src="@{/assets/media/icons/icon_logo_white.svg}" width="152" height="26" alt="Zenius ITSM" />
             <span class="name" th:text="#{process.label.title}"></span>
             <span class="separator"></span>
@@ -77,7 +77,7 @@
             </button>
             <span class="ml-auto" id="process-name"></span>
         </div>
-        <div class="process-element-palette">
+        <div class="z-process-element-palette">
             <button type="button" class="rectangle-menu shape event">
                 <span class="icon icon-event"></span>
                 <label class="icon-text" th:text="#{process.designer.element.event}"></label>
@@ -111,15 +111,15 @@
                 <label class="icon-text" th:text="#{process.designer.element.background}"></label>
             </button>
         </div>
-        <div class="process-main">
-            <div class="drawing-board"></div>
+        <div class="z-process-main">
+            <div class="z-drawing-board" id="processDrawingBoard"></div>
         </div>
-        <div class="process-properties-header">
+        <div class="z-process-properties-header">
             <span id="properties-name"></span>
         </div>
-        <div class="process-properties"></div>
+        <div class="z-process-properties"></div>
     </div>
-    <template id="process-info">
+    <template id="processInfo">
         <div class="process-info-main">
             <h5 class="process-info-title" th:text="#{process.designer.attribute.processInformation}"></h5>
             <div class="process-info-dashboard">
