--- a/src/main/resources/public/template/layout/fragments/commonHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonHead.html
@@ -25,6 +25,8 @@
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/js/lib/zValidation.legacy.js}"></script>
     <script th:src="@{/assets/js/lib/zTree.js}"></script>
+    <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
+    <script th:src="@{/assets/vendors/tagify/tagify.custom.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[ */
 
