--- a/src/main/resources/public/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/scss/theme/default/itsm.scss
@@ -16,6 +16,7 @@
 @import '_buttons.scss';
 @import '_layout.scss';
 @import '_gnb.scss';
+@import '_top.scss';
 @import '_alerts.scss';
 @import '_scrollbars.scss';
 @import '_file-uploader.scss';
