--- a/src/main/resources/public/scss/theme/default/_gnb.scss
+++ b/src/main/resources/public/scss/theme/default/_gnb.scss
@@ -49,37 +49,6 @@
           }
         }
       }
-      .z-user-info {
-        height: 3.125rem; // 50px
-        padding: 0.6875rem 0 0.6875rem 1.3125rem;
-        .z-user-name {
-          display: inline-block;
-          height: 1.688rem;  // 27px
-          line-height: 1.688rem;  // 27px
-          color: map-get($grays, "blue");
-          font-weight: $font-weight-medium;
-        }
-        .z-user-profile {
-          display: inline-block; 
-          width: 1.688rem; // 27px
-          height: 1.688rem;  // 27px
-          @include borderRadius(50%);
-          margin-right: 0.625rem; // 10px
-          vertical-align: middle;
-        }
-      }
-      .z-logout {
-        height: 3.125rem; // 50px
-        padding: 0.6875rem 0 0.6875rem 1.3125rem;
-        .z-btn-logout {
-          font-weight: $font-weight-medium;
-          color: map-get($grays, "blue");
-        }
-        .z-icon-logout {
-          margin-right: 0.875rem; // 14px
-          @include maskImage('#{$icon-folder-path}gnb/icon_gnb_logout.svg', 1.6875rem, 1.6875rem, no-repeat, center, null, $icon-gnb-color); // 27px
-        }
-      }
       & > div:hover { background: $menu-bg-hover; }
     }
   }
@@ -132,7 +101,14 @@
         .z-gnb-link {
           cursor: pointer;
           color: $menu-color;
-          &:hover { color: $menu-hover-color; background: $menu-bg-hover }
+          &:hover {
+            &:not(.z-active, .z-active-parent) {
+              color: $menu-hover-color;
+              background: $menu-bg-hover;
+              .z-icon-gnb { background: $menu-hover-color; }
+              .z-arrow-right, .z-arrow-down { background: $menu-hover-color; }
+            }
+          }
           .z-menu-name {
             display: inline-block;
             padding-left: 1.1875rem; //19px
