--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -528,6 +528,7 @@ $tag-invalid-border-color:                   #FFE2E6;
 
 ////////////////////////////// input box /////////////////////////////
 $input-clear-right:                          0rem;
+$input-bg-icon-color:                        $gray500;
 
 /////////////////////////////// slider ///////////////////////////////
 $slider-range-bg-color:                      $neutral200;
